<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECO-B</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="LoginText">Login</string>
    <string name="LoginID">아이디 입력</string>
    <string name="LoginPW">비밀번호 입력</string>
    <string name="SaveId">아이디 저장</string>
    <string name="AutoLoginChk">자동 로그인</string>
    <string name="Version">Ver 1.0</string>
    <string name="LoginImgBtn">LoginImgBtn</string>
    <string name="DayBtn">일별</string>
    <string name="WeekBtn">주별</string>
    <string name="MonthBtn">월별</string>
    <string name="TabHeadline">에너지 사용량</string>
    <string name="detailLoc">위치 : </string>
    <string name="detailType">타입 : </string>
    <string name="detailOT">운영시간 : </string>
    <string name="detailState">상태 : </string>
    <string name="innerTemp">실내온도/습도 : </string>
    <string name="RT_">실시간 전력 사용량 : </string>
    <string name="Day_">오늘의 전력 사용량 : </string>
    <string name="Month_">이달의 전력 사용량 : </string>
    <string name="PreMonth_">전월의 전력 사용량 : </string>
    <string name="MaxUseTime">최대 사용전력(시간) : </string>
    <string name="OutAvg">실외기 평균 : </string>
    <string name="ActionInfo">actioninfo</string>
    <string name="ActionSetting">actionsetting</string>
    <string name="DetailImage">detailImage</string>
    <string name="DetailGraph">detailGraph</string>
    <string name="title_activity_dbtest">DBTest</string>
    <string name="Before">◀</string>
    <string name="After">▶</string>
    <string name="BuildingName_Prompt">건물목록</string>
    <string name="title_activity_benchmark">Benchmark</string>
    <!--detailenergy Start-->
    <string name="ElectricityUsageBtn">전기 사용량</string>
    <string name="GasUsageBtn">가스 사용량</string>
    <string name="WaterUsageBtn">수도 사용량</string>
    <string name="TotalEnergyCost">총 에너지 사용요금 : </string>
    <string name="ElecticityUsageTextView">전기 사용량 :</string>
    <string name="GasUsageTextView">가스 사용량 :</string>
    <string name="WaterUsageTextView">수도 사용량 :</string>
    <string name="EnergyUsingInfo"> 에너지 사용정보</string>
    <!--detailenergy End-->
<!--     <string name=""></string> -->
<!--     <string name=""></string> -->
<!--     <string name=""></string> -->
    

</resources>