<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DetailEnergyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/BeforeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Before" />

            <TextView
                android:id="@+id/CurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/EnergyUsingInfo"
                android:textSize="36sp" />

            <Button
                android:id="@+id/AfterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/After" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ElecticityUsageTextView"
            android:textSize="30sp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/EUTextView1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/EUTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/EUTextView3"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/EUTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GasUsageTextView"
            android:textSize="30sp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/GUTextView1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/GUTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/GUTextView3"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/GUTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WaterUsageTextView"
            android:textSize="30sp" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/WUTextView1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/WUTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/WUTextView3"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/WUTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalEnergyCost"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/SumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ElectricityChartBtn"
            android:background="@drawable/button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:textSize="28sp"
            android:text="@string/ElectricityUsageBtn" />

        <Button
            android:id="@+id/GasChartBtn"
            android:background="@drawable/button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:textSize="28sp"
            android:text="@string/GasUsageBtn" />

        <Button
            android:id="@+id/WaterChartBtn"
            android:background="@drawable/button_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:textSize="28sp"
            android:text="@string/WaterUsageBtn" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp" >

        <WebView
            android:id="@+id/ElectricityChart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <WebView
            android:id="@+id/GasChart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <WebView
            android:id="@+id/WaterChart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

</LinearLayout>