<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:isScrollContainer="false"
    android:orientation="vertical" >
    
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/GasBeforeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Before" />

            <TextView
                android:id="@+id/GasCurrentDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/EnergyUsingInfo"
                android:textSize="36sp" />

            <Button
                android:id="@+id/GasAfterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/After" />
        </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="현재 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUNow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="30(Nm3)"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="동일 면적대비 비교 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100(Nm3)"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/GUCurrentMonthTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="현월 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUCurrentMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="102(Nm3)"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="동일유형(집합건물) :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="111(Nm3)"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="전월 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GULastMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="90k(Nm3)"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="온도/습도 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUTemperatureHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5℃/93"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="인근 빌딩 평균 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUAvg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="111(Nm3)"
                android:textSize="22sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="에너지 사용요금 :"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/GUCost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="12,000원"
                android:textSize="22sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >

            <WebView
                android:id="@+id/GasChart"
                android:layout_width="fill_parent"
                android:layout_height="320dp"
                android:layout_weight="1" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="벤치마킹 대상 비교 정보"
                android:textSize="28sp" />

            <Button
                android:id="@+id/GasBenchmarking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="290dp"
                style="@style/btnStyleSandrift"
                android:onClick="BenchMarkSettingOnClick"
                android:text="벤치마킹 설정 "
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="빌딩명"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:background="#324323" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="사용량(Nm3)"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:background="#324323" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="주소"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="1dp"
                android:background="#324323" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="연면적(m2)"
                android:textSize="22sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:background="#324323" />

        <ListView
            android:id="@+id/GasBenchList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="5dp"
            android:scrollbars="horizontal" >
        </ListView>
    </TableLayout>

</LinearLayout>